<resources>
    <string name="app_name">运维管家（测）</string>
    <!--我的(测)-->
    <string name="mine_change_pass">修改密码</string>
    <string name="mine_about">关于庆渔堂</string>
    <string name="mine_question">常见问题</string>
    <string name="mine_report">意见反馈</string>
    <string name="mine_exit">退出登录</string>
    <string name="mobile_phone">手机</string>
    <string name="branch_center">分中心</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_password_again_hint">请再次输入新密码</string>
    <string name="password_notice">密码长度6-20位，字母或数字</string>
    <string name="csm_type">类型</string>
    <string name="csm_type1">建议</string>
    <string name="csm_type2">意见</string>
    <string name="csm_type3">投诉</string>
    <string name="csm_type4">其他</string>
    <string name="csm_title">标题</string>
    <string name="hint_csm_title">请输入标题</string>
    <string name="csm_context">内容</string>
    <string name="hint_csm_context">请输入反馈内容</string>
    <string name="csm_files">附件</string>
    <!--任务-->
    <string name="task_usually">常用任务</string>
    <!--任务详情-->
    <string name="accept_task">接单</string>
    <string name="install_config">安装配置</string>
    <string name="install_order">安装工单</string>
    <string name="deal_result">处理结果</string>
    <string name="confirm_time">接单时间</string>
    <string name="real_done_time">实际完成时间</string>
    <string name="is_take_service_cost">是否代收服务费</string>
    <string name="is_take_deposit_cost">是否代收押金费</string>
    <string name="device_list">设备清单</string>
    <string name="files">附件</string>
    <string name="remark">备注</string>
    <string name="files_picture">附件图片</string>
    <string name="maintain_type">维护类型</string>
    <string name="maintain_next_time">下次维护时间</string>
    <string name="done_time">完成时间</string>
    <string name="deal_type">处理方式</string>
    <string name="is_change_device">是否更换设备</string>
    <string name="config">配置</string>
    <string name="add_fishpond_device">＋ 添加KD326设备</string>
    <string name="add_fishpond_device2">＋ 添加QY601设备</string>
    <string name="upload_service_take_files">上传服务费用收据</string>
    <string name="upload_deposit_take_files">上传押金费用收据</string>
    <string name="upload_install_confirm_form">上传确认单</string>
    <string name="install_finish">结束安装</string>
    <!--维护工单-->
    <string name="maintain_order">维护工单</string>
    <string name="maintain_next">下次维护时间</string>
    <string name="maintain_tips">维护内容</string>
    <string name="maintain_finish">结束维护</string>
    <string name="maintain_sign">打卡</string>
    <string name="hint_question_desc">问题描述</string>
    <!--报修工单-->
    <string name="repair_order">故障工单</string>
    <string name="repair_create_pic">报修照片</string>
    <string name="repair_finish">结束维修</string>
    <string name="repair_device">报修设备</string>
    <string name="device_change">更换设备</string>
    <string name="device_id">设备ID</string>
    <string name="device_state">设备状态</string>
    <string name="device_detail">设备详情</string>
    <string name="device_config">参数配置</string>
    <string name="device_calibration">校准</string>
    <string name="deal_scene">现场解决</string>
    <string name="deal_by_customer">养殖户自行解决</string>
    <string name="fault_reason">故障原因</string>
    <string name="fault_repair">维修内容</string>
    <string name="upload_repair_form">上传维修单</string>
    <string name="upload_receive_pay">上传收款数据</string>
    <string name="getpay_picture">收款凭证</string>
    <string name="repair_picture">维修单</string>
    <!--设备配置-->
    <string name="new_device">新设备</string>
    <string name="please_choice">请选择</string>
    <string name="fishpond">鱼塘</string>
    <string name="fishpond_address">鱼塘地址</string>
    <string name="test_connect">测试连接</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="sensor_config">传感器配置</string>
    <string name="limit_up">上限</string>
    <string name="limit_down1">下限1</string>
    <string name="limit_down2">下限2</string>
    <string name="alarm_line1">报警线1</string>
    <string name="alarm_line2">报警线2</string>
    <string name="sensor_unit">mg/L</string>
    <string name="hint_sensor_value">输入数值</string>
    <string name="control_type">控制类型</string>
    <string name="control_by_hand">手动</string>
    <string name="control_auto">自动</string>
    <string name="control1_config">控制器1配置</string>
    <string name="device_type">设备类型</string>
    <string name="device_name">设备名称</string>
    <string name="control_name">通道名称</string>
    <string name="hint_device_name">鱼塘名称+设备类型+编号</string>
    <string name="have_ammeter">是否有电流表</string>
    <string name="ammeter_model">电流表型号</string>
    <string name="ammeter_code">电流表编号</string>
    <string name="ammeter_power">功率</string>
    <string name="limit_current_up">电流上限</string>
    <string name="limit_current_down">电流下限</string>
    <string name="limit_voltage_up">电压上限</string>
    <string name="limit_voltage_down">电压下限</string>
    <string name="limit_oxygen_up">溶解氧上限</string>
    <string name="limit_oxygen_down">溶解氧下限</string>
    <string name="control_switch">开关控制</string>
    <string name="control2_config">控制器2配置</string>

    <!--回收工单-->
    <string name="callback_order">回收工单</string>
    <string name="device_is_normal">设备是否完好</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="describe">说明</string>
    <string name="upload_broken_devices">上传损坏设备照片</string>
    <string name="upload_retrieve_form">上传设备回收单</string>
    <string name="retrieve_confirm">确认回收</string>
    <string name="_broken_devices">损坏设备照片</string>
    <string name="_retrieve_form">设备回收单</string>
    <!--消息-->
    <string name="message_alarm">告警消息</string>
    <string name="click_detail">点击查看</string>
    <string name="show_detail">查看详情</string>
    <string name="hint_search_task">请输入任务关键字</string>
    <string name="hint_search_device">请输入关键字</string>
    <!--设备-->
    <string name="device_search_hint">按照养殖户、鱼塘、设备ID搜索</string>
    <string name="device_o2value">溶氧值</string>
    <string name="device_temperature">温度</string>
    <string name="device_phvalue">PH值</string>
    <string name="device_switch1">控制1状态</string>
    <string name="device_switch2">控制2状态</string>
    <string name="device_control_type">控制方式</string>
    <string name="click_device_detail">查看设备详情</string>

    <string name="pact_pay_type">支付方式</string>
    <string name="pay_crash">现金</string>
    <string name="pay_bank">银行汇款</string>

    <!--Qy601-->
    <string name="control3_config">控制器3配置</string>
    <string name="control4_config">控制器4配置</string>
    <string name="connection_mode_select">选择连接方式</string>
    <string name="connection_mode_line">有线</string>
    <string name="connection_mode_wireless">无线</string>
    <string name="text_temperature">温度</string>
    <string name="text_ph">PH值</string>
    <string name="text_normal">正常</string>
    <string name="text_auto">自动</string>
    <string name="text_manual">手动</string>

    <string name="device_change_kd">更改为KD326</string>
    <string name="device_change_qy">更改为QY601</string>
    <string name="text_add_contacts">＋ 添加联系人</string>
    <string name="text_add_contact2">添加联系人</string>
    <string name="text_contacts">联系人</string>
    <string name="text_contact_number">联系电话</string>
    <string name="text_day_contacts">白班鱼塘联系人/电话</string>
    <string name="text_night_contacts">晚班鱼塘联系人/电话</string>
    <string name="text_day_contacts_2">白班鱼塘备用联系人/电话</string>
    <string name="text_night2_contacts_2">晚班鱼塘备用联系人/电话</string>
    <string name="text_affirm">确认</string>
    <string name="text_device_pair">配对</string>

    <string name="text_fishpond_detail">鱼塘详情</string>
    <string name="text_device_detail">设备详情</string>
    <string name="text_device_pair_success">设备配对成功</string>
    <string name="text_device_pair_fail">设备配对失败</string>
    <string name="toast_device_pair_no">请先设备配对</string>
    <string name="toast_input_device_id">请输入6位设备Id</string>

    <!--设备告警-->
    <string name="text_device_status">状态</string>
    <string name="status_data_alarm1">数据告警1</string>
    <string name="status_data_alarm2">数据告警2</string>
    <string name="status_device_offline">不在线告警</string>
    <string name="status_device_alarm">设备告警</string>
    <string name="status_electricity_exception">电流异常</string>
    <string name="status_outages_alarm">断电告警</string>
    <string name="status_data_analysis_exception">数据解析异常</string>

</resources>
